--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
   </head>
   <body>
     <div class="container">
-    
+      <p>1. 수능 선택과목</p>
+      <p>희망 전공을 선택해 주세요!</p>
       <div class="child">
-        <p>1. 수능 선택과목</p>
-        <p>희망 전공을 선택해 주세요!</p>
         <input type="button" class="mb" id="wjsrhd" value="무전공" onclick="f1();">
         <input type="button" class="mb" id="science" value="공학" onclick="f2();">
         <input type="button" class="mb" id="nature" value="자연" onclick="f3();">
@@ -414,7 +413,7 @@
         <p>._.</p>
         <input type="button" class="ma" id="selected" name="rPtks" value="계산" onclick="q1();">
       </div>
-      <div id="result1"></div>
+      <div class="child" id="result1"></div>
     </div>
     <script type="text/javascript">
       var n1;
@@ -658,7 +657,7 @@ else if (h==1){n2=64;}
   <p>._.</p>
   <input type="button" class="ma" id="selected" name="rPtks" value="계산" onclick="q2();">
     </div>
-    <div id="result2"></div>
+    <div class="child" id="result2"></div>
     </div>
 
     <script type="text/javascript">
